--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "handlebars": "4.4.5",
     "hashids": "2.0.1",
     "he": "1.2.0",
-    "helloworks-sdk": "pietgeursen/helloworks-nodejs-sdk",
+    "helloworks-sdk": "github:pietgeursen/helloworks-nodejs-sdk",
     "helmet": "3.21.2",
     "html-pdf": "2.2.0",
     "ics": "2.18.0",
@@ -134,8 +134,6 @@
     "nyc": "^14.1.1",
     "post-merge-install": "^0.3.0",
     "prettier": "1.18.2",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
     "sinon": "^7.5.0",
     "supertest": "^4.0.2",
     "supertest-as-promised": "^4.0.2",
